<resources>
    <string name="app_name">Mi Jardin</string>
    <string name="mi_jard_n">Mi Jardín</string>
    <string name="plantar_nuevo">Plantar nuevo</string>
    <string name="salir">Salir</string>
    <string name="todo">TODO</string>
    <string name="mijardin">MiJardin</string>
    <string name="plantar">Plantar</string>
    <string name="cancelar">Cancelar</string>
    <string name="crea_tu_planta">Crea Tu Planta</string>
    <string name="nombre">Nombre:</string>
    <string name="nueva_planta">Nueva planta</string>
    <string name="descripci_n">Descripción:</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="escribe_aqu_tu_descripci_n">escribe aquí tu descripción</string>

</resources>